Hiding overflow seems to have fixed my image issue.

--- a/public/Assets/CSS/style.css
+++ b/public/Assets/CSS/style.css
@@ -67,9 +67,9 @@ body {
 }
 
 .aboutImg {    
-  /* border-radius: 10px;
-  margin-top: 15px; */
-  max-width: 100%;
+  border-radius: 10px;
+  /* margin-top: 15px; */
+  max-width: 65%;
   height: auto;
   overflow: hidden;
   /* filter: grayscale(50%); */
